@startuml

title __STUBPARSER-2's Class Diagram__\n

  package edu.ub.informatica.disseny.stub {
    interface DAO_STUB {
    }
  }
  

  package edu.ub.informatica.disseny.stub {
    class DAO_XML {
    }
  }
  

  package edu.ub.informatica.disseny.totseries {
    interface DataManager {
    }
  }
  

  package edu.ub.informatica.disseny.totseries {
    class ExempleDataManager {
    }
  }
  

  package edu.ub.informatica.disseny.stub {
    class STUBXMLParser {
    }
  }
  

  package edu.ub.informatica.disseny.totseries {
    class TotSeriesXMLParser {
    }
  }
  

  DAO_XML -up-|> DAO_STUB
  ExempleDataManager -up-|> DataManager
  STUBXMLParser o-- DAO_XML : dataManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
